--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,6 @@
     min-height: 45rem;
 }
 .navigation-container {
-    background-color: red;
+    background-color: rgb(226, 2, 2);
     width: max-content;
 }
