--- a/src/app/cast/cast-page/cast-page.component.html
+++ b/src/app/cast/cast-page/cast-page.component.html
@@ -1,3 +1,3 @@
-<p>
-  cast-page works!
-</p>
+<div class="container">
+  <shared-display-grid [items]="cast.employees"></shared-display-grid>
+</div>
