updates card styling

--- a/src/app/shared/components/display-info/display-info.component.css
+++ b/src/app/shared/components/display-info/display-info.component.css
@@ -3,10 +3,11 @@
     width: 100%;
 }
 #bottom-left {
-    width: 50%;
+    width: 60%;
 }
 #bottom-right {
-    width: auto;
+    text-align: right;
+    width: 40%;
 }
 .container {
     padding: 1rem;
