updates cast page copy

--- a/src/app/cast/cast-page/cast-page.component.html
+++ b/src/app/cast/cast-page/cast-page.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+  <h1>The Cast of iSeatz</h1>
   <shared-display-grid [items]="cast.employees"></shared-display-grid>
 </div>
