--- a/src/app/cast/cast-page/cast-page.component.html
+++ b/src/app/cast/cast-page/cast-page.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <h1>The Cast of iSeatz</h1>
-  <shared-display-grid [items]="cast.employees"></shared-display-grid>
+  <shared-display-grid
+    [items]="cast.employees"
+    [path]="'cast'"></shared-display-grid>
 </div>
