--- a/src/app/shared/components/display-card/display-card.component.html
+++ b/src/app/shared/components/display-card/display-card.component.html
@@ -5,7 +5,7 @@
   <div class="container--info">
     <shared-display-info
       [topText]="item.name"
-      [bottomLeftText]="item.title"
-      [bottomRightText]="item.team"></shared-display-info>
+      [bottomLeftText]="bottomLeftText"
+      [bottomRightText]="bottomRightText"></shared-display-info>
   </div>
 </div>
