--- a/src/app/shared/components/display-grid/display-grid.component.html
+++ b/src/app/shared/components/display-grid/display-grid.component.html
@@ -1,5 +1,6 @@
 <div class="display-container">
   <shared-display-card
     *ngFor="let item of items"
-    [item]="item"></shared-display-card>
+    [item]="item"
+    [path]="path"></shared-display-card>
 </div>
