adds image to splash page

--- a/src/app/core/page/core-page.component.html
+++ b/src/app/core/page/core-page.component.html
@@ -1,3 +1,4 @@
 <div class="container">
   <h1>Welcome to the Talent Show Homepage!</h1>
+  <img src="https://assets.corneliuses.com/photos/iSeatz/KickballTeam.jpg" />
 </div>
