--- a/src/app/shared/components/display-card/display-card.component.css
+++ b/src/app/shared/components/display-card/display-card.component.css
@@ -1,5 +1,6 @@
 .container--person-card {
     border: 1px solid black;
+    cursor: pointer;
     display: inline-flex;
     margin: 0.5rem 0.5rem;
     width: 95%;
