--- a/src/app/shared/components/display-modal/display-modal.component.css
+++ b/src/app/shared/components/display-modal/display-modal.component.css
@@ -45,6 +45,7 @@ p {
     text-align: center;
 }
 .container {
+    cursor: not-allowed;
     max-height: 30rem;
     padding: 0.5rem 0;
     overflow-y: scroll;
