--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -2,11 +2,8 @@
   <div class="image-container">
     <img src="https://assets.corneliuses.com/photos/iSeatz/iseatz-squarelogo.png" />
   </div>
-  <a
+  <core-navigation-link
     *ngFor="let link of nav.navLinks"
-    routerLink={{link.path}}
-    routerLinkActive={nav.checkActiveNavLink(link.label)}
-    (click)="nav.updateActiveNavLink(link.label)">
-    {{link.label}}
-  </a>
+    class="nav-link"
+    [link]="link"></core-navigation-link>
 </div>
