--- a/src/app/admin/pages/admin-page-individual/admin-page-individual.component.html
+++ b/src/app/admin/pages/admin-page-individual/admin-page-individual.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-    <admin-select [items]="cast.employees"></admin-select>
+    <admin-select
+        [items]="cast.employees"
+        [label]="'Teammate'"></admin-select>
     <admin-individual-form [edit]="true" *ngIf="admin.activeEmployee"></admin-individual-form>
 </div>
