--- a/src/app/admin/components/admin-select/admin-select.component.html
+++ b/src/app/admin/components/admin-select/admin-select.component.html
@@ -1,10 +1,10 @@
 <div class="button-container">
-  <button class="toggle-button" (click)="toggleMenu()">Select Employee</button>
+  <button class="toggle-button" (click)="toggleMenu()">Select {{label}}</button>
 </div>
 <div class="menu-container" *ngIf="toggled">
   <button
     class="employee-name"
     *ngFor="let item of items"
-    (click)="admin.updateActiveEmployeeName($event)"
+    (click)="updateActiveItem($event)"
     value={{stringifyItemToPass(item)}}>{{item.name}}</button>
 </div>
