--- a/src/app/admin/components/team-form/team-form.component.html
+++ b/src/app/admin/components/team-form/team-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="instruction">
-    {{type}} Employee
+    {{type}} Team
     <small class="subtitle" *ngIf="type === 'Add'">(All fields are required)</small>
   </h1>
   <div class="row-container">
