--- a/src/app/admin/pages/admin-page/admin-page.component.html
+++ b/src/app/admin/pages/admin-page/admin-page.component.html
@@ -14,4 +14,9 @@
         Welcome to the Admin Console
       </h1>
     </div>
+    <div *ngIf="!admin.inputting && admin.requestResponse" class="response">
+      <h3>
+        {{admin.requestResponse}}
+      </h3>
+    </div>
 </div>
