--- a/src/app/admin/components/admin-select/admin-select.component.html
+++ b/src/app/admin/components/admin-select/admin-select.component.html
@@ -1,10 +1,15 @@
-<div class="button-container">
-  <button class="toggle-button" (click)="toggleMenu()">Select {{label}}</button>
-</div>
-<div class="menu-container" *ngIf="toggled">
-  <button
-    class="employee-name"
-    *ngFor="let item of items"
-    (click)="updateActiveItem($event)"
-    value={{stringifyItemToPass(item)}}>{{item.name}}</button>
+<div class="container">
+  <div class="button-container">
+    <button
+      class="toggle-button"
+      (click)="toggleMenu()"
+      [@toggleAdmin]="toggled ? 'open' : 'closed'">Select {{label}}</button>
+  </div>
+  <div class="menu-container" *ngIf="toggled">
+    <button
+      class="employee-name"
+      *ngFor="let item of items"
+      (click)="updateActiveItem($event)"
+      value={{stringifyItemToPass(item)}}>{{item.name}}</button>
+  </div>
 </div>
