--- a/src/app/shared/components/graded-list-item/graded-list-item.component.html
+++ b/src/app/shared/components/graded-list-item/graded-list-item.component.html
@@ -1,1 +1,6 @@
-<p>{{key}}: {{value}}%</p>
+<div class="container">
+    <div class="score">{{value}}%</div>
+    <div class="text-container">
+        <p>{{key}}</p>
+    </div>
+</div>
