fixes typing problem

--- a/src/app/shared/components/graded-list-item/graded-list-item.component.html
+++ b/src/app/shared/components/graded-list-item/graded-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="score">{{value}}%</div>
+    <div class="score">{{value}}</div>
     <div class="text-container">
         <p>{{key}}</p>
     </div>
