--- a/src/app/shared/components/display-modal/display-modal.component.html
+++ b/src/app/shared/components/display-modal/display-modal.component.html
@@ -19,17 +19,17 @@
   <div class="bottom-rows">
     <div class="graded-list-container" id="projects">
       <h2>Projects</h2>
-      <shared-graded-list-item *ngFor="let project of data.item.projects" [gradedItem]="project"></shared-graded-list-item>
+      <shared-graded-list-item *ngFor="let project of data.item.projects" [type]="data.path" [gradedItem]="project"></shared-graded-list-item>
     </div>
     <div class="graded-list-container" id="clients">
       <h2>Clients</h2>
-      <shared-graded-list-item *ngFor="let client of data.item.client" [gradedItem]="client"></shared-graded-list-item>
+      <shared-graded-list-item *ngFor="let client of data.item.client" [type]="data.path" [gradedItem]="client"></shared-graded-list-item>
     </div>
   </div>
   <div class="skills-container" id="skills" *ngIf="data.path === 'cast'">
     <div class="graded-list-container">
       <h2>Skills</h2>
-      <shared-graded-list-item *ngFor="let skill of data.item.skills" [gradedItem]="skill"></shared-graded-list-item>
+      <shared-graded-list-item *ngFor="let skill of data.item.skills" [type]="data.path" [gradedItem]="skill"></shared-graded-list-item>
     </div>
   </div>
   <div class="members" *ngIf="data.path === 'teams'">
