--- a/src/app/admin/components/topic-card/topic-card.component.html
+++ b/src/app/admin/components/topic-card/topic-card.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="button">-</div>
-  <input id="value" name="value" placeholder={{item[1]}}
+  <button>-</button>
+  <input id="value" name="value" placeholder={{itemValue}}
   required="true" minlength="3" [(ngModel)]="value" (ngModelChange)="value=$event">
   <div class="title-container">
-    {{item[0]}}
+    {{itemKey}}
   </div>
 </div>
