--- a/src/app/admin/components/individual-form/individual-form.component.html
+++ b/src/app/admin/components/individual-form/individual-form.component.html
@@ -35,10 +35,18 @@
     <div class="label-container">
       <p>Clients</p>
     </div>
-    <admin-topic-card
-      *ngFor="let client of admin.activeEmployee.client"
-      [item]="client"
-      [active]="true"></admin-topic-card>
+    <div id="clients-active">
+      <admin-topic-card
+        *ngFor="let client of admin.activeEmployee.client"
+        [item]="client"
+        [active]="true"></admin-topic-card>
+    </div>
+    <div id="clients-inactive">
+      <admin-topic-card
+        *ngFor="let client of admin.activeEmployeeInactiveClients"
+        [item]="client"
+        [active]="false"></admin-topic-card>
+    </div>
   </div>
   <div class="button-container">
     <button (click)="showName()">Submit</button>
