--- a/src/app/admin/components/individual-form/individual-form.component.css
+++ b/src/app/admin/components/individual-form/individual-form.component.css
@@ -1,5 +1,6 @@
 .row-container {
     display: inline-flex;
+    padding: 0.5rem 0;
     width: 100%;
 }
 .button-container {
@@ -13,4 +14,9 @@
 }
 .container {
     padding: 1rem;
+}
+.clients-row {
+    display: inline-flex;
+    justify-content: space-evenly;
+    width: 100%;
 }
