--- a/src/app/admin/components/individual-form/individual-form.component.html
+++ b/src/app/admin/components/individual-form/individual-form.component.html
@@ -35,17 +35,19 @@
     <div class="label-container">
       <p>Clients</p>
     </div>
-    <div id="clients-active">
-      <admin-topic-card
-        *ngFor="let client of admin.activeEmployee.client"
-        [item]="client"
-        [active]="true"></admin-topic-card>
-    </div>
-    <div id="clients-inactive">
-      <admin-topic-card
-        *ngFor="let client of admin.activeEmployeeInactiveClients"
-        [item]="client"
-        [active]="false"></admin-topic-card>
+    <div class="clients-row">
+      <div class="clients-column" id="clients-active">
+        <admin-topic-card
+          *ngFor="let client of admin.activeEmployee.client"
+          [item]="client"
+          [active]="true"></admin-topic-card>
+      </div>
+      <div class="clients-column" id="clients-inactive">
+        <admin-topic-card
+          *ngFor="let client of admin.activeEmployee.inactiveClients"
+          [item]="client"
+          [active]="false"></admin-topic-card>
+      </div>
     </div>
   </div>
   <div class="button-container">
