--- a/src/app/admin/components/topic-card/topic-card.component.css
+++ b/src/app/admin/components/topic-card/topic-card.component.css
@@ -7,7 +7,7 @@
     width: 100%;
 }
 
-button {
+.add-subtract {
     background-color: white;
     border: 1px solid rgb(219, 23, 23);
     border-radius: 50%;
@@ -32,6 +32,9 @@ input::placeholder {
     flex-direction: column;
     justify-content: center;
     padding-right: 0.5rem;
+}
+.title-row {
+    display: inline-flex;
 }
 #false {
     background-color: gainsboro;
