--- a/src/app/admin/components/topic-card/topic-card.component.html
+++ b/src/app/admin/components/topic-card/topic-card.component.html
@@ -1,8 +1,11 @@
 <div class="container" id={{active}}>
-  <button id={{active}} (click)="toggleActive()">{{resolveSign()}}</button>
-  <input *ngIf="active" id="value" name="value" placeholder={{itemValue}}
-  required="true" minlength="3" [(ngModel)]="value" (ngModelChange)="value=$event">
+  <button class="add-subtract" id={{active}} (click)="toggleActive()">{{resolveSign()}}</button>
+  <input *ngIf="active" id="value" name="value" placeholder={{itemValue}} class={{itemKey}}
+  required="true" minlength="3" [(ngModel)]="value" (ngModelChange)="handleValueChange($event)">
   <div class="title-container">
-    {{itemKey}}
+    <div class="title-row">
+      <p>{{itemKey}}</p>
+      <button *ngIf="!isSubmitted" (click)="valueChange()">submit</button>
+    </div>
   </div>
 </div>
