--- a/src/app/admin/components/topic-card/topic-card.component.css
+++ b/src/app/admin/components/topic-card/topic-card.component.css
@@ -41,3 +41,9 @@ input::placeholder {
     border-color: gainsboro;
     color: black;
 }
+.submit-change {
+    background-color: white;
+    border-radius: 1rem;
+    color: rgb(219, 23, 23);
+    border: 1px solid rgb(219, 23, 23);
+}
