adds skills section

--- a/src/app/admin/components/individual-form/individual-form.component.html
+++ b/src/app/admin/components/individual-form/individual-form.component.html
@@ -40,13 +40,37 @@
         <admin-topic-card
           *ngFor="let client of admin.activeEmployee.client"
           [item]="client"
+          [topic]="'client'"
           [active]="true"
-          (changeValue)="handleTopicValueChanged($event)"></admin-topic-card>
+          (changeValue)="handleTopicValueChanged($event, 'client')"></admin-topic-card>
       </div>
       <div class="clients-column" id="clients-inactive">
         <admin-topic-card
           *ngFor="let client of admin.activeEmployee.inactiveClients"
           [item]="client"
+          [topic]="'client'"
+          [active]="false"></admin-topic-card>
+      </div>
+    </div>
+  </div>
+  <div class="row-container">
+    <div class="label-container">
+      <p>Skills</p>
+    </div>
+    <div class="clients-row">
+      <div class="clients-column" id="clients-active">
+        <admin-topic-card
+          *ngFor="let skill of admin.activeEmployee.skills"
+          [item]="skill"
+          [topic]="'skill'"
+          [active]="true"
+          (changeValue)="handleTopicValueChanged($event, 'skill')"></admin-topic-card>
+      </div>
+      <div class="clients-column" id="clients-inactive">
+        <admin-topic-card
+          *ngFor="let skill of admin.activeEmployee.inactiveSkills"
+          [item]="skill"
+          [topic]="'skill'"
           [active]="false"></admin-topic-card>
       </div>
     </div>
