updates topic card border

--- a/src/app/admin/components/topic-card/topic-card.component.css
+++ b/src/app/admin/components/topic-card/topic-card.component.css
@@ -39,7 +39,7 @@ input::placeholder {
 }
 #false {
     background-color: gainsboro;
-    border-color: gainsboro;
+    border-color: white;
     color: black;
 }
 .submit-change {
