adds graded-list component

--- a/src/app/admin/components/individual-form/individual-form.component.html
+++ b/src/app/admin/components/individual-form/individual-form.component.html
@@ -75,6 +75,28 @@
       </div>
     </div>
   </div>
+  <div class="row-container">
+    <div class="label-container">
+      <p>Projects</p>
+    </div>
+    <div class="clients-row">
+      <div class="clients-column" id="clients-active">
+        <admin-topic-card
+          *ngFor="let skill of admin.activeEmployee.skills"
+          [item]="skill"
+          [topic]="'skill'"
+          [active]="true"
+          (changeValue)="handleTopicValueChanged($event, 'skill')"></admin-topic-card>
+      </div>
+      <div class="clients-column" id="clients-inactive">
+        <admin-topic-card
+          *ngFor="let skill of admin.activeEmployee.inactiveSkills"
+          [item]="skill"
+          [topic]="'skill'"
+          [active]="false"></admin-topic-card>
+      </div>
+    </div>
+  </div>
   <div class="button-container">
     <button (click)="ind.showName()">Submit</button>
   </div>
