creates select component

--- a/src/app/admin/components/individual-form/individual-form.component.html
+++ b/src/app/admin/components/individual-form/individual-form.component.html
@@ -7,6 +7,7 @@
   <admin-input-row [edit]="edit" [title]="'Photo'"></admin-input-row>
   <admin-input-row [edit]="edit" [title]="'Department'"></admin-input-row>
   <admin-input-row [edit]="edit" [title]="'Email'"></admin-input-row>
+  <admin-select-row [title]="'Team'"></admin-select-row>
   <admin-graded-list [title]="'Clients'" (passValue)="handleTopicValueChanged($event)"></admin-graded-list>
   <admin-graded-list [title]="'Skills'" (passValue)="handleTopicValueChanged($event)"></admin-graded-list>
   <div class="button-container">
