--- a/src/app/admin/components/select-row/select-row.component.html
+++ b/src/app/admin/components/select-row/select-row.component.html
@@ -2,10 +2,14 @@
   <div class="label-container">
     <p>{{title}}</p>
   </div>
-  <div class="select-container">
-    <select (change)="handleValueSelect($event)">
+  <div class="select-container" [ngSwitch]="title">
+    <select *ngSwitchCase="'Team'" (change)="handleValueSelect($event)">
       <option value={{admin.activeEmployee.team}} selected>{{admin.activeEmployee.team}}</option>
       <option *ngFor="let team of admin.activeEmployee.inactiveTeams" value={{team.name}}>{{team.name}}</option>
+    </select>
+    <select *ngSwitchCase="'Department'" (change)="handleValueSelect($event)">
+      <option value={{admin.activeEmployee.dept}} selected>{{admin.activeEmployee.dept}}</option>
+      <option *ngFor="let dept of admin.activeEmployee.inactiveDepartments" value={{dept.name}}>{{dept.name}}</option>
     </select>
   </div>
 </div>
